# swarm-reasoning

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.yml  pyproject.toml
services/agent-service/: .dockerignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
services/agent-service/docs/: reference-langgraph-temporal-pattern.py
services/agent-service/src/swarm_reasoning/: config.py  worker.py
services/agent-service/src/swarm_reasoning/activities/: __init__.py  completion.py  run_agent.py  run_pipeline.py  run_status.py
services/agent-service/src/swarm_reasoning/agents/: _utils.py  coverage_core.py  coverage_core_tools.py  entity_extraction.py  fanout_base.py  langgraph_base.py  messaging.py  observation_tools.py  tool_runtime.py
services/agent-service/src/swarm_reasoning/completion/: __init__.py  register.py
services/agent-service/src/swarm_reasoning/models/: observation.py  status.py
services/agent-service/src/swarm_reasoning/pipeline/: __init__.py  context.py  graph.py  state.py
services/agent-service/src/swarm_reasoning/stream/: key.py  redis.py
services/agent-service/src/swarm_reasoning/temporal/: __init__.py  activities.py  errors.py  retry.py
services/agent-service/src/swarm_reasoning/workflows/: __init__.py  claim_verification.py  dag.py
services/agent-service/tests/integration/: test_full_pipeline.py  test_simplified_workflow.py  test_workflow_execution.py
services/agent-service/tests/integration/agents/: conftest.py  test_blindspot_flow.py  test_coverage_integration.py  test_entity_extractor.py  test_ingestion_flow.py  test_intake_integration.py  test_intake_tools_no_async_anthropic.py  test_source_validator_flow.py  test_synthesizer_flow.py  test_synthesizer_integration.py  test_validation_flow.py  test_validation_integration.py
services/agent-service/tests/unit/: test_completion.py  test_coverage_node.py  test_dag.py  test_evidence_node.py  test_intake_node.py  test_models.py  test_pipeline_graph.py  test_pipeline_state_and_context.py  test_pipeline_synthesizer_node.py  test_run_pipeline.py  test_validation_node.py  test_worker.py  test_workflow.py
services/agent-service/tests/unit/agents/: test_analyze_blindspots.py  test_citation_aggregator.py  test_claim_detector_handler.py  test_claim_detector_tools.py  test_claim_intake.py  test_claimreview_matcher.py  test_coverage_agent.py  test_coverage_core_tools.py  (+37 more)
services/agent-service/tests/validation/: __init__.py  baseline.py  conftest.py  reporter.py  runner.py  test_comparison.py  test_corpus_schema.py
services/fact-checker-cli/: pyproject.toml
services/fact-checker-cli/src/fact_checker/: __init__.py  cli.py
(+720 files in other folders)
