[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-reasoning"
version = "0.1.0"
description = "Multi-agent fact-checking system with Redis Streams observation transport"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "redis>=5.0,<6.0",
    "temporalio>=1.7,<2.0",
    "anthropic>=0.25,<1.0",
    "python-dateutil>=2.8,<3.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "jsonschema>=4.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/swarm_reasoning"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring a running Redis instance",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
