[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fact-checker-cli"
version = "0.1.0"
description = "CLI for driving swarm-reasoning agents from the terminal"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1,<9.0",
]

[project.scripts]
fact-checker = "fact_checker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fact_checker"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
